analysis/low-level-api-fir/testData/lazyResolve/errors/danglingAnnotationTopLevelFunction3.kt
annotation class Ann

@Ann( @Ann(
fun <caret>foo() {}
